--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@400;700;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap');
 body{
   font-family:"Arial", Serif;
   overflow-x:hidden;
@@ -69,34 +70,109 @@ body{
   margin-left:50px;
 }
 
+#title{
+  transition: 0.5s;
+  padding:20px;
+  overflow:hidden;
+  width:100%;
+  padding-left: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+
+}
+
+#title h1{
+  text-align: center;
+  padding: 5px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: lighter;
+  margin-top: 0;
+  margin-bottom: 0;
+
+}
+
+
 #main{
   transition: 0.5s;
   padding:20px;
   overflow:hidden;
   width:100%;
   padding-left: 0;
- 
+  padding-top: 0;
 }
 
-#main h1{
-  text-align: center;
-  padding: 5px;
-  font-family: 'Roboto', sans-serif;}
+#main p{
+margin-top: 0;
+margin-bottom: 0;
+font-size: 16px;
+font-family:'Merriweather', serif;
+
+}
+#main h2{
+  font-weight: lighter;
+  font-family: 'Oswald', sans-serif;
+
+}
+
+.headStyle{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+
 .hero{
   min-width: 450px;
-}
-hr{
-color: #0A0908;
-	box-shadow: 0 5px 5px 0px #0A0908 ;
-  width: 95%;
+
 }
 .center{
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 85%;
-  border-radius: 10px;
+  display: block;
+margin-left: auto;
+margin-right: auto;
+width: 100%;
+border-radius: 0px;
 
+}
+
+.postInfo{
+  font-size: 12px;
+  font-family: 'Merriweather', serif;
+  font-weight: lighter;
+line-height: 25px;
+font-style: italic;
+padding-left: 20px;
+margin-bottom: 0;
+}
+hr{
+  margin-bottom: 15px;
+  width: 93%;
+}
+
+
+
+/* Button */
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.next {
+  background-color: #5B7B7A;
+  color: white;
+}
+
+.round {
+  border-radius: 50%;
 }
 
 
@@ -106,6 +182,25 @@ color: #0A0908;
 
 
 
+
+
+@media(min-width:1024px){
+.container{
+max-width: 65% !important;
+margin: auto;
+}
+
+.hero img{
+  border-radius: 25px;
+}
+
+hr{
+  width: 96%;
+}
+
+
+
+}
 
 
 
@@ -122,4 +217,16 @@ color: #0A0908;
 
 @media(min-width:568px){
   .open-slide{display:none}
+
+  .hero img{
+    border-radius: 25px;
+  }
+  hr{
+    width: 95%;
+  }
+
+  .container{
+    width: 85% !important;
+    margin: auto;
+    }
 }
